--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "download": "8.0.0",
+    "node-fetch": "2.6.1",
+    "papaparse": "5.3.0",
+    "xlsx": "^0.16.9"
   }
 }
