--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "actualizar": "node database/index.js"
   },
   "dependencies": {
     "next": "10.1.3",
