--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "download": "8.0.0",
-    "node-fetch": "2.6.1",
-    "papaparse": "5.3.0",
+    "download": "^8.0.0",
+    "node-fetch": "^2.6.1",
+    "papaparse": "^5.3.0",
     "xlsx": "^0.16.9"
   }
 }
