--- a/.github/workflows/actualizar_datos.yml
+++ b/.github/workflows/actualizar_datos.yml
@@ -18,10 +18,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
-      - run: npm i -D download node-fetch papaparse xlsx
+      - run: npm install --only=dev
       - run: npm run actualizar
       - run: git config user.name 'Brian Aguilar D'
       - run: git config user.email 'aguilar.16999@gmail.com'
       - run: git add .
-      - run: git commit -m 'Fecha actualizada $NOW'
+      - run: git commit -m "Fecha actualizada $NOW"
       - run: git push
