--- a/.github/workflows/actualizar_datos.yml
+++ b/.github/workflows/actualizar_datos.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
-      - run: npm install --only=dev
+      - run: npm install --only=development
       - run: npm run actualizar
       - run: git config user.name 'Brian Aguilar D'
       - run: git config user.email 'aguilar.16999@gmail.com'
