--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "actualizar": "node database/index.js"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.18",
+    "@amcharts/amcharts4-geodata": "^4.1.20",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
