--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "react-table": "^7.6.3"
   },
   "devDependencies": {
-    "download": "8.0.0",
+    "csv-parser": "^3.0.0",
     "node-fetch": "2.6.1",
-    "papaparse": "5.3.0",
     "xlsx": "0.16.9"
   }
 }
